#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(Blend, 1.0, abioyeajala@gmail.com)
AC_CONFIG_SRCDIR([src])
AM_INIT_AUTOMAKE()

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdio.h stdlib.h string.h unistd.h math.h])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
